# mesh

./: BUILD.md  Cargo.toml  CoverPage.md  README.md  build-android.sh  mesh_identity_7332.key  mesh_identity_7333.key  readme
.claude/: settings.local.json
design/: logo1.ai
mesh-android/: settings.gradle.kts
mesh-android/app/: build.gradle.kts
mesh-android/app/src/main/: AndroidManifest.xml
mesh-android/app/src/main/java/com/mesh/app/: BluetoothTransport.kt  MainActivity.kt  MeshBridge.kt  MeshService.kt  OnboardingActivity.kt  PinActivity.kt  WifiDirectManager.kt
mesh-core/: Cargo.toml
mesh-core/src/: crypto.rs  discovery.rs  file_transfer.rs  gateway.rs  identity.rs  lib.rs  message.rs  node.rs  peer.rs  router.rs  storage.rs  transport.rs
mesh-ffi/: Cargo.toml
mesh-ffi/src/: lib.rs
mesh-node/: Cargo.toml
mesh-node/src/: main.rs
