[package]
name = "mesh-node"
version = "0.1.0"
edition = "2021"

[dependencies]
mesh-core = { path = "../mesh-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.31", features = ["image"] }
rfd = "0.15"
hex = "0.4"
cpal = "0.15"
image = { version = "0.25", default-features = false, features = ["ico", "jpeg", "png"] }
rodio = "0.19"
